--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.example.customviewdrawline.DrawView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="530dp"
+        android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.example.customviewdrawline.DrawPath
+            android:id="@+id/PaintArea"
+            android:layout_width="match_parent"
+            android:layout_height="530dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="100"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/ControlUndo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="25"
+            android:src="@drawable/ic_baseline_undo_24" />
+
+        <ImageView
+            android:id="@+id/ControlRedo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="25"
+            android:src="@drawable/ic_baseline_redo_24" />
+
+        <ImageView
+            android:id="@+id/ControlColorPicker"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="25"
+            android:src="@drawable/ic_baseline_color_lens_24" />
+
+        <ImageView
+            android:id="@+id/ControlDelete"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="25"
+            android:src="@drawable/ic_baseline_delete_24" />
+
+    </LinearLayout>
+</LinearLayout>
